--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build --prod --base-href https://noxichek.github.io/angular_heroes/ && ngh --dir=dist/app"
   },
   "private": true,
   "dependencies": {
